--- a/Valorant/appsettings.json
+++ b/Valorant/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RedisURL": "127.0.0.1:6379",
+  "JWT": {
+      "ValidAudience": "http://localhost:7299",
+      "ValidIssuer": "http://localhost:7299",
+      "Secret": "JWTAuthentication@777"
+  },
   "AllowedHosts": "*"
 }
